--- a/index.html
+++ b/index.html
@@ -1,12 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Kalkulator BMI</title>
+<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+<!-- Header: Berisi judul website -->
+<header>
+    <h1>Kalkulator BMI</h1>
+</header>
+
+<!-- Main: Berisi konten utama kalkulator BMI -->
+<main>
+    <div class="container">
+<p>Berat badan ideal adalah impian semua orang. Yuk, hitung BMI Anda sekarang!</p>
+
+<!-- Form untuk input data BMI -->
+<form id="bmiForm">
+    <div class="form-group">
+        <label for="gender">Jenis Kelamin:</label>
+        <!-- Input pilihan jenis kelamin -->
+        <input type="radio" id="male" name="gender" value="Pria" checked> Pria
+        <input type="radio" id="female" name="gender" value="Wanita"> Wanita
+        </div>
+        <div class="form-group">
+        <label for="weight">Berat Badan (kg):</label>
+        <!-- Input berat badan -->
+        <input type="number" id="weight" placeholder="Masukkan berat badan" required>
+        </div>
+        <div class="form-group">
+        <label for="age">Usia (tahun):</label>
+        <!-- Input usia -->
+        <input type="number" id="age" placeholder="Masukkan usia" required>
+        </div>
+        <div class="form-group">
+        <label for="height">Tinggi Badan (cm):</label>
+        <!-- Input tinggi badan -->
+        <input type="number" id="height" placeholder="Masukkan tinggi badan" required>
+        </div>
+        <!-- Tombol untuk menghitung dan mereset form -->
+        <button type="button" onclick="calculateBMI()">Hitung BMI</button>
+        <button type="reset">Reset</button>
+    </form>
     
+    <!-- Bagian hasil yang akan menampilkan BMI -->
+    <div id="result" class="result">
+        <h2>Hasil</h2>
+        <p id="bmiResult"></p>
+        <p id="advice"></p>
+    </div>
+    </div>
+</main>
+
+<!-- Footer: Berisi informasi pembuat -->
+<footer>
+    <p>Made by Wahyu Ali @2024</p>
+</footer>
+
+<script src="js/script.js"></script>
 </body>
 </html>
